# metasearch

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  LICENSE  Makefile  README.md  build.rs  docker-compose.yml  install.sh  settings.example.yml
locales/: categories.json  category_keywords.json
python/: README.md
python/briefing/: README.md  pyproject.toml
python/briefing/metasearch_briefing/: __init__.py
python/client/: pyproject.toml
python/metasearchgo/: README.md  pyproject.toml
python/metasearchgo/metasearchgo/: __init__.py  client.py
scripts/: add_missing_lang_feeds.py  deploy-g1-remote.sh  deploy-g1.sh  run.sh  translate_all.js  translate_briefing.py  translate_ollama.js
services/: briefing_server.py  news_briefing.py
src/: aggregate.rs  ai.rs  answerers.rs  api.rs  article.rs  article_analysis.rs  build_info.rs  cache.rs  config.rs  googlenews_decode.rs  health.rs  lib.rs  logging.rs  main.rs  news_article.rs  news_digest.rs  obs.rs  personalization.rs  query.rs  ratelimit.rs  search.rs  thumbnail.rs  types.rs  url_safety.rs
src/engines/: archive_music.rs  arxiv.rs  askubuntu.rs  bing.rs  bing_images.rs  bing_scrape.rs  bingnews.rs  brave.rs  brave_api.rs  brave_images.rs  codeberg.rs  crates_io.rs  crossref.rs  custom.rs  daum_scrape.rs  doaj.rs  dockerhub.rs  duckduckgo.rs  duckduckgo_images.rs  duckduckgo_videos.rs  europepmc.rs  gdelt.rs  github.rs  gitlab.rs  google.rs  google_scrape.rs  googlenews.rs  hackernews.rs  internetarchive.rs  lemmy.rs  local_feeds.rs  marginalia.rs  mod.rs  mojeek.rs  naver_scrape.rs  npm.rs  openalex.rs  openlibrary.rs  openstreetmap.rs  openverse.rs  (+19 more)
src/feeds/: classify.rs  collector.rs  embeddings.rs  manager.rs  mod.rs  parser.rs  poller.rs  store.rs  trending.rs
src/server/: auth.rs  mod.rs  response.rs
static/: feed_pool.json  feeds.json  hls.min.js  index.html  llms.txt  major_news_feeds.jsonl  manifest.json  radio_stations.json  source_trust.json  sw.js
static/lang/: af.json  ar.json  bg.json  bn.json  ca.json  cs.json  da.json  de.json  el.json  en.json  es.json  et.json  eu.json  fa.json  fi.json  fr.json  gl.json  he.json  hi.json  hr.json  hu.json  hy.json  id.json  is.json  it.json  ja.json  ka.json  kk.json  km.json  ko.json  lt.json  lv.json  mk.json  ml.json  mn.json  mr.json  ms.json  my.json  ne.json  nl.json  (+23 more)
tests/: ai_e2e.rs  answer_e2e.rs  deep_research.rs  empty_results.rs  health_cooldown.rs  live_drift.rs  load.rs
tests/fixtures/: article_sample.html  arxiv.xml  askubuntu.json  bing.json  bing_images.html  bingnews.json  brave.html  brave_api.json  brave_images.html  codeberg.json  crates_io.json  crossref.json  custom_atom.xml  custom_json.json  custom_rss.xml  ddg_instant.json  ddg_lite.html  dictionary.json  doaj.json  dockerhub.json  duckduckgo_images.json  duckduckgo_videos.json  europepmc.json  frankfurter.json  gdelt.json  github.json  gitlab.json  google.json  googlenews.xml  hackernews.json  internetarchive.json  lemmy.json  marginalia.html  mojeek.html  mymemory.json  npm.json  open_meteo_geocode.json  open_meteo_weather.json  openalex.json  openlibrary.json  (+21 more)
