[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "metasearch-client"
version = "0.1.0"
description = "Python client for Metasearch - search 200+ engines with AI answers"
readme = "README.md"
license = "MIT"
authors = [
    { name = "Zeus Kim", email = "zeus@zeus.kim" }
]
keywords = ["search", "metasearch", "ai", "llm", "privacy"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP :: Indexing/Search",
]
requires-python = ">=3.9"
dependencies = [
    "requests>=2.28.0",
]

[project.urls]
Homepage = "https://github.com/zeus-kim/metasearch"
Documentation = "https://github.com/zeus-kim/metasearch#api-endpoints"
Repository = "https://github.com/zeus-kim/metasearch"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
]
