[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "metasearchgo"
version = "0.1.0"
description = "Privacy-first search with 200+ engines and AI answers"
readme = "README.md"
license = "MIT"
authors = [
    { name = "Zeus Kim", email = "zeus@zeus.kim" }
]
keywords = ["search", "metasearch", "ai", "llm", "privacy", "news", "briefing", "tts"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP :: Indexing/Search",
]
requires-python = ">=3.9"
dependencies = [
    "requests>=2.28.0",
    "aiohttp>=3.8.0",
    "edge-tts>=6.1.0",
]

[project.urls]
Homepage = "https://github.com/zeus-kim/metasearch"
Documentation = "https://github.com/zeus-kim/metasearch#readme"
Repository = "https://github.com/zeus-kim/metasearch"

[project.scripts]
metasearch-briefing = "metasearchgo.briefing:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "build",
    "twine",
]
